immich/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich
  namespace: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich
  template:
    metadata:
      labels:
        app: immich
    spec:
      securityContext:
        runAsUser: 3001
        runAsGroup: 3001
        fsGroup: 3001
        fsGroupChangePolicy: OnRootMismatch
      volumes:
        - name: immich-vol
          persistentVolumeClaim:
            claimName: immich
        - name: localtime
          hostPath:
            path: /etc/localtime
            type: File
      containers:
      - name: immich
        image: ghcr.io/immich-app/immich-server:v3.2.4
        securityContext:
          runAsNonRoot: true
          allowPrivilegeEscalation: false
        resources:
          requests:
            cpu: 150m
            memory: 1325M
          limits:
            cpu: 3000m
            memory: 4000M
        ports:
          - containerPort: 2283
        volumeMounts:
          - name: immich-vol
            mountPath: /data
          - name: localtime
            mountPath: /etc/localtime
            readOnly: true
---
apiVersion: v1
kind: Service
metadata:
  name: immich
  namespace: immich
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.255.120
  ports:
  - port: 80
    targetPort: 2283
    name: tcp
  selector:
    app: immich
---
