immich/redis.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: immich
  labels:
    loadbalancer: cilium
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.0.203
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
       app: redis
    spec:
      containers:
      - name: redis
        image: redis:alpine
        ports:
          - containerPort: 6379
        resources:
              requests:
                   cpu: "1m"
        volumeMounts:
          - name: data
            mountPath: /redis-master-data
          - name: redis-config
            mountPath: /redis-master
      volumes:
      - name: redis-config
        configMap:
           name: redis-config
      - name: data
        emptyDir: {}
